build pluto only for now

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,4 +3,5 @@ ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
