--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -8,22 +8,20 @@ comments:
 
 book:
   title: "Calculus with Julia"
-  date: now
   author: "John Verzani"
+  date: now
   search: true
   repo-url: https://github.com/jverzani/CalculusWithJuliaNotes.jl
-  repo-actions: [edit]
-  downloads: [pdf, epub]
+  repo-subdir: quarto/
+  repo-actions: [edit, issue]
   navbar:
     background: light
     search: true
     logo: logo.png
-    pinned: true
-  page-footer:
-    left: "Copyright 2022, John Verzani"
-    right:
-      - icon: github
-        href: https://github.com/
+    pinned: false
+  sidebar:
+    collapse-level: 1
+  page-footer: "Copyright 2022, John Verzani"
   chapters:
     - index.qmd
     - part: "Precalculus Concepts"
@@ -125,10 +123,11 @@ bibliography: references.bib
 
 website:
   favicon: logo.png
+  reader-mode: true
 
 format:
   html:
-    theme: lux # spacelab # lux # sketchy # cosmo # https://quarto.org/docs/output-formats/html-themes.html
+    theme: lux #lux # spacelab # lux # sketchy # cosmo # https://quarto.org/docs/output-formats/html-themes.html
     number-depth: 3
     toc-depth: 3
     link-external-newwindow: true
