edits, new symbolics.qmd file

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -110,7 +110,7 @@ book:
 
     - part: "Alternatives"
       chapters:
-        # - alternatives/symbolics.qmd
+        - alternatives/symbolics.qmd
         # - alternatives/sciML.qmd
         # - alternatives/interval_arithmetic.qmd
         - alternatives/plotly_plotting.qmd
