--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,4 +1,4 @@
-version: 0.3
+version: 0.4
 
 project:
   type: book
@@ -108,7 +108,7 @@ book:
         - integral_vector_calculus/stokes_theorem.qmd
         - integral_vector_calculus/review.qmd
 
-    - part: "Alternatives"
+    - part: "Alternative packages"
       chapters:
         - alternatives/symbolics.qmd
         # - alternatives/sciML.qmd
