--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,4 +1,4 @@
-version: 0.4
+version: 0.5
 
 project:
   type: book
@@ -111,7 +111,7 @@ book:
     - part: "Alternative packages"
       chapters:
         - alternatives/symbolics.qmd
-        # - alternatives/sciML.qmd
+        # - alternatives/SciML.qmd
         # - alternatives/interval_arithmetic.qmd
         - alternatives/plotly_plotting.qmd
         - alternatives/makie_plotting.qmd
