--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,5 @@
-# This is *if* we have CI publish; currently we use `quarto render gh-pages`
 on:
+  workflow_dispatch:
   push:
     branches: main
 
