add section landing pages

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -24,7 +24,7 @@ book:
   page-footer: "Copyright 2022, John Verzani"
   chapters:
     - index.qmd
-    - part: "Precalculus Concepts"
+    - part: precalc.qmd
       chapters:
         - precalc/calculator.qmd
         - precalc/variables.qmd
@@ -44,14 +44,14 @@ book:
         - precalc/trig_functions.qmd
         - precalc/julia_overview.qmd
 
-    - part: "Limits"
+    - part: limits.qmd
       chapters:
         - limits/limits.qmd
         - limits/limits_extensions.qmd
         - limits/continuity.qmd
         - limits/intermediate_value_theorem.qmd
 
-    - part: "Derivatives"
+    - part: derivatives.qmd
       chapters:
         - derivatives/derivatives.qmd
         - derivatives/numeric_derivatives.qmd
@@ -68,7 +68,7 @@ book:
         - derivatives/related_rates.qmd
         - derivatives/taylor_series_polynomials.qmd
 
-    - part: "Integrals"
+    - part: integrals.qmd
       chapters:
         - integrals/area.qmd
         - integrals/ftc.qmd
@@ -83,14 +83,14 @@ book:
         - integrals/arc_length.qmd
         - integrals/surface_area.qmd
 
-    - part: "ODEs"
+    - part: ODEs.qmd
       chapters:
         - ODEs/odes.qmd
         - ODEs/euler.qmd
         - ODEs/solve.qmd
         - ODEs/differential_equations.qmd
 
-    - part: "Differential vector calculus"
+    - part: differentiable_vector_calculus.qmd
       chapters:
         - differentiable_vector_calculus/polar_coordinates.qmd
         - differentiable_vector_calculus/vectors.qmd
@@ -100,7 +100,7 @@ book:
         - differentiable_vector_calculus/vector_fields.qmd
         - differentiable_vector_calculus/plots_plotting.qmd
 
-    - part: "Integral vector calculus"
+    - part: integral_vector_calculus.qmd
       chapters:
         - integral_vector_calculus/double_triple_integrals.qmd
         - integral_vector_calculus/line_integrals.qmd
