--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -6,7 +6,7 @@ name: Quarto Publish to gh-pages
 on:
   # Triggers the workflow on push events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,7 +22,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      
+
       # setup Quarto
       - uses: quarto-dev/quarto-actions/setup@v2
 
@@ -31,13 +31,10 @@ jobs:
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
       - run: pip install jupyter
-      
+
       # setup Julia
       - uses: julia-actions/setup-julia@v1
       - run: julia --project -e 'using Pkg; Pkg.instantiate()'
-
-      # setup R
-      - uses: r-lib/actions/setup-r@v2
 
       # render and push to the gh-pages branch
       - name: Publish to GitHub Pages (and render)
@@ -47,4 +44,3 @@ jobs:
           path: quarto
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
-
