--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -6,7 +6,7 @@ name: Quarto Publish to gh-pages
 on:
   # Triggers the workflow on push events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
