--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 ImplicitEquations = "95701278-4526-5785-aba3-513cca398f19"
 Integrals = "de52edbc-65ea-441a-8357-d3a637375a31"
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
@@ -29,6 +30,7 @@ Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 RealPolynomialRoots = "87be438c-38ae-47c4-9398-763eabe5c3be"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Richardson = "708f8203-808e-40c0-ba2d-98a6953ed40d"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
