make pdf file generation work

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -13,6 +13,7 @@ book:
   search: true
   repo-url: https://github.com/jverzani/CalculusWithJuliaNotes.jl
   repo-subdir: quarto/
+  downloads: [pdf]
   repo-actions: [edit, issue]
   navbar:
     background: light
@@ -133,10 +134,19 @@ website:
 
 format:
   html:
-    theme: lux #lux # spacelab # lux # sketchy # cosmo # https://quarto.org/docs/output-formats/html-themes.html
+    theme: lux # spacelab # lux # sketchy # cosmo # https://quarto.org/docs/output-formats/html-themes.html
     number-depth: 3
     toc-depth: 3
     link-external-newwindow: true
+#  pdf:
+#    documentclass: scrbook
+#    classoption: [oneside]
+#    geometry:
+#      - top=30mm
+#      - left=10mm
+#      - right=10mm
+#      - heightrounded
+#    colorlinks: true
 
 execute:
   error: true
