comment out pdf generation

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -138,16 +138,16 @@ format:
     number-depth: 3
     toc-depth: 3
     link-external-newwindow: true
-  pdf:
-    documentclass: scrbook
-    classoption: [oneside]
-    keep-tex: true
-    geometry:
-      - top=30mm
-      - left=10mm
-      - right=10mm
-      - heightrounded
-    colorlinks: true
+#  pdf:
+#    documentclass: scrbook
+#    classoption: [oneside]
+#    keep-tex: true
+#    geometry:
+#      - top=30mm
+#      - left=10mm
+#      - right=10mm
+#      - heightrounded
+#    colorlinks: true
 
 execute:
   error: true
