issue with animation and surface

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,4 +1,5 @@
-version: "0.16"
+version: "0.18"
+jupyter: julia-1.9
 
 project:
   type: book
@@ -126,6 +127,8 @@ book:
         - misc/quick_notes.qmd
         # - misc/bibliography.qmd
     - references.qmd
+
+execute-dir: project
 
 bibliography: references.bib
 
