--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,5 +1,5 @@
 version: "0.18"
-jupyter: julia-1.9
+engine: julia
 
 project:
   type: book
@@ -153,5 +153,5 @@ format:
 #    colorlinks: true
 
 execute:
-  error: true
+  error: false
   freeze: auto
