--- a/quarto/Project.toml
+++ b/quarto/Project.toml
@@ -19,10 +19,12 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Meshing = "e6723b4c-ebff-59f1-b4b7-d97aa5274f73"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 PlotUtils = "995b91a9-d308-5afd-9ec6-746e21dbc043"
 PlotlyLight = "ca7969ec-10b3-423e-8d99-40f33abb42bf"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -31,6 +33,7 @@ Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 QuizQuestions = "612c44de-1021-4a21-84fb-7261cf5eb2d4"
 RealPolynomialRoots = "87be438c-38ae-47c4-9398-763eabe5c3be"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Richardson = "708f8203-808e-40c0-ba2d-98a6953ed40d"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
