--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,4 +1,4 @@
-version: "0.18"
+version: "0.19"
 engine: julia
 
 project:
@@ -84,6 +84,7 @@ book:
         - integrals/volumes_slice.qmd
         - integrals/arc_length.qmd
         - integrals/surface_area.qmd
+        - integrals/twelve-qs.qmd
 
     - part: ODEs.qmd
       chapters:
