--- a/_typos.toml
+++ b/_typos.toml
@@ -1,2 +1,15 @@
 [default.extend-words]
-Pn = "Pn"
+astroid = "astroid"
+
+nd = "nd"
+BA = "BA"
+ba = "ba"
+brach = "brach:
+ABD = "ABD"
+DNE = "DNE"
+
+Hass = "Hass"
+
+multline = "multline"
+
+infiniment = "infiniment"
