work on limits section

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,4 +1,4 @@
-version: "0.20"
+version: "0.21"
 engine: julia
 
 project:
@@ -23,7 +23,7 @@ book:
     pinned: false
   sidebar:
     collapse-level: 1
-  page-footer: "Copyright 2022, John Verzani"
+  page-footer: "Copyright 2022-24, John Verzani"
   chapters:
     - index.qmd
     - part: precalc.qmd
