edits, add dark mode

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -138,7 +138,9 @@ website:
 
 format:
   html:
-    theme: lux # spacelab # lux # sketchy # cosmo # https://quarto.org/docs/output-formats/html-themes.html
+    theme:
+      light: lux # spacelab # lux # sketchy # cosmo # https://quarto.org/docs/output-formats/html-themes.html
+      dark: darkly
     number-depth: 3
     toc-depth: 3
     link-external-newwindow: true
