pdf files; edits

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ docs/site
 test/benchmarks.json
 Manifest.toml
 TODO.md
+/*/_pdf_index.pdf
+/*/*/_pdf_index.pdf
+/*/_pdf_index.typ
+/*/*/_pdf_index.typ
+/*/CalculusWithJulia.pdf
 default.profraw
 /quarto/default.profraw
 /*/*/default.profraw
