--- a/quarto/differentiable_vector_calculus/Project.toml
+++ b/quarto/differentiable_vector_calculus/Project.toml
@@ -13,4 +13,5 @@ PlotlyKaleido = "f2990250-8cf9-495f-b13a-cce12b45703c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+ScatteredInterpolation = "3f865c0f-6dca-5f4d-999b-29fe1e7e3c92"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
