--- a/quarto/integral_vector_calculus/Project.toml
+++ b/quarto/integral_vector_calculus/Project.toml
@@ -3,6 +3,7 @@ CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+ImplicitIntegration = "bc256489-3a69-4a66-afc4-127cc87e6182"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 PlotlyKaleido = "f2990250-8cf9-495f-b13a-cce12b45703c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
