--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -100,6 +100,7 @@ book:
         - differentiable_vector_calculus/scalar_functions.qmd
         - differentiable_vector_calculus/scalar_functions_applications.qmd
         - differentiable_vector_calculus/vector_fields.qmd
+        - differentiable_vector_calculus/matrix_calculus_notes.qmd
         - differentiable_vector_calculus/plots_plotting.qmd
 
     - part: integral_vector_calculus.qmd
