--- a/quarto/differentiable_vector_calculus/Project.toml
+++ b/quarto/differentiable_vector_calculus/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
