--- a/quarto/limits/Project.toml
+++ b/quarto/limits/Project.toml
@@ -2,7 +2,12 @@
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+QuizQuestions = "612c44de-1021-4a21-84fb-7261cf5eb2d4"
 Richardson = "708f8203-808e-40c0-ba2d-98a6953ed40d"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TextWrap = "b718987f-49a8-5099-9789-dcd902bef87d"
