orthogonal; work around plotly()

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -83,6 +83,7 @@ book:
         - integrals/volumes_slice.qmd
         - integrals/arc_length.qmd
         - integrals/surface_area.qmd
+        - integrals/orthogonal_polynomials.qmd
         - integrals/twelve-qs.qmd
 
     - part: ODEs.qmd
@@ -115,7 +116,7 @@ book:
       chapters:
         - alternatives/symbolics.qmd
         - alternatives/SciML.qmd
-        # - alternatives/interval_arithmetic.qmd
+        #- alternatives/interval_arithmetic.qmd
         - alternatives/plotly_plotting.qmd
         - alternatives/makie_plotting.qmd
 
@@ -157,5 +158,7 @@ format:
 
 execute:
   error: false
-#  freeze: false
-  freeze: auto
+  freeze: false
+#  freeze: auto
+#  cache: false
+#  enabled: true
