--- a/quarto/integral_vector_calculus/Project.toml
+++ b/quarto/integral_vector_calculus/Project.toml
@@ -4,9 +4,14 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 ImplicitIntegration = "bc256489-3a69-4a66-afc4-127cc87e6182"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 PlotlyKaleido = "f2990250-8cf9-495f-b13a-cce12b45703c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+QuizQuestions = "612c44de-1021-4a21-84fb-7261cf5eb2d4"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TextWrap = "b718987f-49a8-5099-9789-dcd902bef87d"
