--- a/quarto/misc/Project.toml
+++ b/quarto/misc/Project.toml
@@ -1,2 +1,12 @@
 [deps]
+CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+QuizQuestions = "612c44de-1021-4a21-84fb-7261cf5eb2d4"
+SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TextWrap = "b718987f-49a8-5099-9789-dcd902bef87d"
