--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -158,7 +158,7 @@ format:
 
 execute:
   error: false
-  freeze: false
-#  freeze: auto
+#  freeze: false
+  freeze: auto
 #  cache: false
 #  enabled: true
