--- a/quarto/differentiable_vector_calculus/Project.toml
+++ b/quarto/differentiable_vector_calculus/Project.toml
@@ -18,6 +18,7 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 QuizQuestions = "612c44de-1021-4a21-84fb-7261cf5eb2d4"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 ScatteredInterpolation = "3f865c0f-6dca-5f4d-999b-29fe1e7e3c92"
+SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TextWrap = "b718987f-49a8-5099-9789-dcd902bef87d"
