em dash; sentence case

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ docs/site
 test/benchmarks.json
 Manifest.toml
 TODO.md
+Changelog.md
 /*/_pdf_index.pdf
 /*/*/_pdf_index.pdf
 /*/_pdf_index.typ
@@ -13,3 +14,4 @@ TODO.md
 default.profraw
 /quarto/default.profraw
 /*/*/default.profraw
+/*/*_files
