--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -25,14 +25,16 @@ book:
   page-footer: "Copyright 2022-25, John Verzani"
   chapters:
     - index.qmd
+    - part: basics.qmd
+      chapters:
+        - basics/calculator.qmd
+        - basics/variables.qmd
+        - basics/numbers_types.qmd
+        - basics/logical_expressions.qmd
+        - basics/vectors.qmd
+        - basics/ranges.qmd
     - part: precalc.qmd
       chapters:
-        - precalc/calculator.qmd
-        - precalc/variables.qmd
-        - precalc/numbers_types.qmd
-        - precalc/logical_expressions.qmd
-        - precalc/vectors.qmd
-        - precalc/ranges.qmd
         - precalc/functions.qmd
         - precalc/plotting.qmd
         - precalc/transformations.qmd
