sequences and series

--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -1,4 +1,4 @@
-version: "0.24"
+version: "0.25"
 engines: ['julia']
 
 project:
@@ -51,6 +51,7 @@ book:
       chapters:
         - limits/limits.qmd
         - limits/limits_extensions.qmd
+        - limits/sequences_series.qmd
         - limits/continuity.qmd
         - limits/intermediate_value_theorem.qmd
 
